--- a/style.css
+++ b/style.css
@@ -16,7 +16,20 @@ h1{
     display: flex;
     align-items: center;
     font-family: 'Billabong';
-    margin: 0;
+    height: 80px;
+    margin-top: 0%;
+    margin-right: 2%;
     padding-top: 1%;
     padding-left: 1%;
+    font-size: 4.375rem ;
+    font-weight:normal;
+    color: white;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.logo{
+margin-right: 1%;
+
 }
