--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@ body{
 @font-face {
     font-family: 'Billabong';
     src: url(./Billabong.ttf);
-    font-family:'Roboto';
-    src: url(./assets/Roboto-Regular.ttf);
+    font-family:'Roboto_regular';
+    src: url(./assets/police/Roboto-Regular.ttf);
+
 }
 
+@font-face {
+    font-family: 'Roboto_light';
+    src: url(./assets/police/Roboto-Light.ttf);
+}
 
 
 h1{
@@ -40,7 +45,7 @@ margin-right: 1%;
 
 h2{
     color: white;
-    font-family:'Roboto';
+    font-family: 'Roboto_regular';
     text-align: center;
     font-size: 2.5rem;
 }
@@ -48,7 +53,7 @@ h2{
 
 .p1{
     color: white;
-    font-family: 'Roboto';
+    font-family: 'Roboto_regular';
     font-size: 1.563rem;
     margin: 0;
 
@@ -56,7 +61,7 @@ h2{
 }
 .p2{
     color: white;
-    font-family: 'Roboto';
+    font-family: 'Roboto_regular';
     font-size: 1.563rem;
     margin:0;
     
@@ -67,4 +72,60 @@ h2{
 }
 .placep{
     margin-left: 1%;
+}
+
+/*-------------Fin de l'entête------------*/
+.inpligne1{
+    margin-top: 12vh;
+    
+}
+.nomtel{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.tel{
+    color: white;
+    margin-right: 35%;
+    font-size: 1.875rem;
+    font-family: 'Roboto_light';
+}
+
+.nom{
+    color: white;
+    margin-left: 3%;
+    font-size: 1.875rem;
+    font-family: 'Roboto_light';
+}
+.placeinp1et2{
+    display: flex;
+    justify-content:space-between;
+    margin-top: 1%;
+    height: 4rem;
+}
+
+.inp1{
+    margin-left: 3%;
+    width:32.68rem ;
+    font-size: 150%;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    background:transparent;
+    border-color: white;
+    outline: none;
+    
+
+}
+
+.inp2{
+    width: 32.68rem;
+    margin-right: 14.5%;
+    font-size: 150%;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    background:transparent;
+    border-color: white;
+    outline: none;
 }
